[package]
name = "playground"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
name="playground"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
neon-build = "0.10.1"

[dependencies]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
